create user table

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ bitsandbytes==0.41.1
 typing==3.7.4.3
 ffmpeg-python==0.2.0
 pydantic==2.6.4
+greenlet==3.0.3
 SQLAlchemy==2.0.29
 psycopg2-binary==2.9.9
 asyncpg==0.29.0
 alembic==1.13.1
+python-dotenv==1.0.1
