認証・リザルト画面用エンドポイント追加その他
- FE描画内容に合わせてエンドポイントを追加しました
- 動作が重いためclose処理部分をOpenAIに切り替えました。
- 音声モデルについて、compute_metricsの設定の誤りによりvalidの計算値でtrainの値を上書きしていたことが判明したためモデルを再学習し正式な値を算出しました

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ __pycache__/
 .pytest_cache/
 .git
 db/db-store/
+
+.env
+.env.local
+/env
+app/pyvenv.cfg
+env/.env
+/env
+app/dump-file.dump
+env/.env
