--- a/app/.env.example
+++ b/app/.env.example
@@ -8,3 +8,10 @@ POSTGRES_ROOT_PASSWORD=password
 POSTGRES_PORT=5432
 POSTGRES_HOST=ashhub
 DB_CONTAINER_NAME=postgres
+
+# JWT払い出し用
+SECRET_KEY=
+SECRET_ALGORITHM=
+
+# OpenAI
+OPENAI_API_KEY
