--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,13 @@ psycopg2-binary==2.9.9
 asyncpg==0.29.0
 alembic==1.13.1
 python-dotenv==1.0.1
+cryptography==42.0.7
+matplotlib==3.9.0
+numpy==1.26.4
+openai==1.29.0
+pandas==2.2.2
+pillow==10.3.0
+platformdirs==4.2.1
+python-jose==3.3.0
+scipy==1.13.0
+seaborn==0.13.2
