--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: ./postgres/Dockerfile
     container_name: gentle-db
+    env_file:
+      - ./.env
     environment:
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
     volumes:
@@ -20,6 +22,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     container_name: gentle-api
+    env_file:
+      - ./.env
     ports:
       - 8000:8000
     depends_on:
