--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - ./.env
     ports:
       - 8000:8000
+    volumes:
+      - ./app:/app
     depends_on:
       - postgres
     networks:
